bug fixes: (#49)
1. remove cake, too op
2. buff me won't revive anymore
3. max level is 200, also for cygnus
4. add cyngus to 4th job now that remove level cap
5. every 20 levels + 20 to slots
6. level 20 achievement now character will be level 1 with a lot more stats (+40 for all)
7. hopefully fix avoiding getting same job twice
8. hopefully fix dup